--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -1,22 +1,41 @@
 # Configuration file
 
 entitiesalwaysinfernal {
+    B:EntityBlueSlime=false
     B:EntityBrainyZombie=false
+    B:EntityCaveSpider=false
     B:EntityCreeper=false
+    B:EntityCyclops=false
     B:EntityEnderman=false
+    B:EntityGrottol=false
     B:EntitySkeleton=false
+    B:EntitySlime=false
     B:EntitySpider=false
     B:EntityTroll=false
     B:EntityWitch=false
+    B:EntityWroughtnaut=false
     B:EntityZombie=false
     B:EntityZombieVillager=false
+    B:MutantCreeperEntity=false
+    B:MutantEndermanEntity=false
+    B:MutantSkeletonEntity=false
     B:MutantZombieEntity=false
 }
 
 
 entitybasehealth {
+    D:EntityBlueSlime=1.0
+    D:EntityCreeper=20.0
+    D:EntityEnderman=40.0
     D:EntitySkeleton=20.0
+    D:EntitySpider=16.0
+    D:EntityTroll=50.72803497314453
+    D:EntityWitch=26.0
     D:EntityZombie=20.0
+    D:EntityZombieVillager=20.0
+    D:MutantCreeperEntity=120.0
+    D:MutantEndermanEntity=200.0
+    D:MutantSkeletonEntity=150.0
 }
 
 
@@ -66,15 +85,24 @@ general {
 
 
 permittedentities {
+    B:EntityBlueSlime=true
     B:EntityBrainyZombie=true
+    B:EntityCaveSpider=true
     B:EntityCreeper=true
+    B:EntityCyclops=true
     B:EntityEnderman=true
+    B:EntityGrottol=true
     B:EntitySkeleton=true
+    B:EntitySlime=true
     B:EntitySpider=true
     B:EntityTroll=true
     B:EntityWitch=true
+    B:EntityWroughtnaut=true
     B:EntityZombie=true
     B:EntityZombieVillager=true
+    B:MutantCreeperEntity=true
+    B:MutantEndermanEntity=true
+    B:MutantSkeletonEntity=true
     B:MutantZombieEntity=true
 }
 
