--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,10 +1,12 @@
 #Minecraft server properties
-#Sat Dec 07 16:23:09 UTC 2024
+#Sat Dec 07 20:29:45 UTC 2024
+spawn-protection=16
 max-tick-time=60000
 generator-settings=
 force-gamemode=false
 allow-nether=true
 gamemode=0
+broadcast-console-to-ops=true
 enable-query=false
 player-idle-timeout=0
 difficulty=1
@@ -32,7 +34,7 @@ generate-structures=true
 online-mode=false
 max-build-height=256
 level-seed=
-prevent-proxy-connections=false
 use-native-transport=true
-motd=\u00A7r              \u00A75\u00A7l(MSX)  \u00A7dHosting Gratuito\u00A7r\n          \u00A7f\u00A7nhttps\://discord.gg/w9xt8ydNZe
+prevent-proxy-connections=false
 enable-rcon=false
+motd=\u00A7r              \u00A75\u00A7l(MSX)  \u00A7dHosting Gratuito\u00A7r\n          \u00A7f\u00A7nhttps\://discord.gg/w9xt8ydNZe
