--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -7,7 +7,9 @@ entitiesalwaysinfernal {
     B:EntityCreeper=false
     B:EntityCyclops=false
     B:EntityEnderman=false
+    B:EntityGorgon=false
     B:EntityGrottol=false
+    B:EntitySiren=false
     B:EntitySkeleton=false
     B:EntitySlime=false
     B:EntitySpider=false
@@ -20,6 +22,7 @@ entitiesalwaysinfernal {
     B:MutantEndermanEntity=false
     B:MutantSkeletonEntity=false
     B:MutantZombieEntity=false
+    B:PoisonousLibelle=false
 }
 
 
@@ -27,6 +30,7 @@ entitybasehealth {
     D:EntityBlueSlime=1.0
     D:EntityCreeper=20.0
     D:EntityEnderman=40.0
+    D:EntityGrottol=20.0
     D:EntitySkeleton=20.0
     D:EntitySpider=16.0
     D:EntityTroll=50.72803497314453
@@ -36,6 +40,7 @@ entitybasehealth {
     D:MutantCreeperEntity=120.0
     D:MutantEndermanEntity=200.0
     D:MutantSkeletonEntity=150.0
+    D:MutantZombieEntity=175.47225952148438
 }
 
 
@@ -91,7 +96,9 @@ permittedentities {
     B:EntityCreeper=true
     B:EntityCyclops=true
     B:EntityEnderman=true
+    B:EntityGorgon=true
     B:EntityGrottol=true
+    B:EntitySiren=true
     B:EntitySkeleton=true
     B:EntitySlime=true
     B:EntitySpider=true
@@ -104,6 +111,7 @@ permittedentities {
     B:MutantEndermanEntity=true
     B:MutantSkeletonEntity=true
     B:MutantZombieEntity=true
+    B:PoisonousLibelle=true
 }
 
 
