--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -1,20 +1,25 @@
 # Configuration file
 
 entitiesalwaysinfernal {
+    B:EntityBlaze=false
     B:EntityBlueSlime=false
     B:EntityBrainyZombie=false
     B:EntityCaveSpider=false
     B:EntityCreeper=false
     B:EntityCyclops=false
     B:EntityEnderman=false
+    B:EntityGhast=false
     B:EntityGorgon=false
     B:EntityGrottol=false
+    B:EntityMagmaCube=false
+    B:EntityPigZombie=false
     B:EntitySiren=false
     B:EntitySkeleton=false
     B:EntitySlime=false
     B:EntitySpider=false
     B:EntityTroll=false
     B:EntityWitch=false
+    B:EntityWitherSkeleton=false
     B:EntityWroughtnaut=false
     B:EntityZombie=false
     B:EntityZombieVillager=false
@@ -31,10 +36,12 @@ entitybasehealth {
     D:EntityCreeper=20.0
     D:EntityEnderman=40.0
     D:EntityGrottol=20.0
+    D:EntityPigZombie=20.0
     D:EntitySkeleton=20.0
     D:EntitySpider=16.0
     D:EntityTroll=50.72803497314453
     D:EntityWitch=26.0
+    D:EntityWitherSkeleton=20.0
     D:EntityZombie=20.0
     D:EntityZombieVillager=20.0
     D:MutantCreeperEntity=120.0
@@ -90,20 +97,25 @@ general {
 
 
 permittedentities {
+    B:EntityBlaze=true
     B:EntityBlueSlime=true
     B:EntityBrainyZombie=true
     B:EntityCaveSpider=true
     B:EntityCreeper=true
     B:EntityCyclops=true
     B:EntityEnderman=true
+    B:EntityGhast=true
     B:EntityGorgon=true
     B:EntityGrottol=true
+    B:EntityMagmaCube=true
+    B:EntityPigZombie=true
     B:EntitySiren=true
     B:EntitySkeleton=true
     B:EntitySlime=true
     B:EntitySpider=true
     B:EntityTroll=true
     B:EntityWitch=true
+    B:EntityWitherSkeleton=true
     B:EntityWroughtnaut=true
     B:EntityZombie=true
     B:EntityZombieVillager=true
