--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -27,11 +27,13 @@ entitiesalwaysinfernal {
     B:MutantEndermanEntity=false
     B:MutantSkeletonEntity=false
     B:MutantZombieEntity=false
+    B:Netherfish=false
     B:PoisonousLibelle=false
 }
 
 
 entitybasehealth {
+    D:EntityBlaze=20.0
     D:EntityBlueSlime=1.0
     D:EntityCreeper=20.0
     D:EntityEnderman=40.0
@@ -123,6 +125,7 @@ permittedentities {
     B:MutantEndermanEntity=true
     B:MutantSkeletonEntity=true
     B:MutantZombieEntity=true
+    B:Netherfish=true
     B:PoisonousLibelle=true
 }
 
