--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -1,6 +1,7 @@
 # Configuration file
 
 entitiesalwaysinfernal {
+    B:EndersoulCloneEntity=false
     B:EntityBlaze=false
     B:EntityBlueSlime=false
     B:EntityBrainyZombie=false
@@ -37,6 +38,7 @@ entitybasehealth {
     D:EntityBlueSlime=1.0
     D:EntityCreeper=20.0
     D:EntityEnderman=40.0
+    D:EntityGhast=10.0
     D:EntityGrottol=20.0
     D:EntityPigZombie=20.0
     D:EntitySkeleton=20.0
@@ -99,6 +101,7 @@ general {
 
 
 permittedentities {
+    B:EndersoulCloneEntity=true
     B:EntityBlaze=true
     B:EntityBlueSlime=true
     B:EntityBrainyZombie=true
