--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -20,6 +20,7 @@ entitiesalwaysinfernal {
     B:EntitySpider=false
     B:EntityTroll=false
     B:EntityWitch=false
+    B:EntityWither=false
     B:EntityWitherSkeleton=false
     B:EntityWroughtnaut=false
     B:EntityZombie=false
@@ -120,6 +121,7 @@ permittedentities {
     B:EntitySpider=true
     B:EntityTroll=true
     B:EntityWitch=true
+    B:EntityWither=true
     B:EntityWitherSkeleton=true
     B:EntityWroughtnaut=true
     B:EntityZombie=true
