--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -8,6 +8,11 @@ entitiesalwaysinfernal {
     B:EntityCaveSpider=false
     B:EntityCreeper=false
     B:EntityCyclops=false
+    B:EntityDreadBeast=false
+    B:EntityDreadGhoul=false
+    B:EntityDreadKnight=false
+    B:EntityDreadScuttler=false
+    B:EntityDreadThrall=false
     B:EntityEnderman=false
     B:EntityGhast=false
     B:EntityGorgon=false
@@ -18,6 +23,7 @@ entitiesalwaysinfernal {
     B:EntitySkeleton=false
     B:EntitySlime=false
     B:EntitySpider=false
+    B:EntityStray=false
     B:EntityTroll=false
     B:EntityWitch=false
     B:EntityWither=false
@@ -109,6 +115,11 @@ permittedentities {
     B:EntityCaveSpider=true
     B:EntityCreeper=true
     B:EntityCyclops=true
+    B:EntityDreadBeast=true
+    B:EntityDreadGhoul=true
+    B:EntityDreadKnight=true
+    B:EntityDreadScuttler=true
+    B:EntityDreadThrall=true
     B:EntityEnderman=true
     B:EntityGhast=true
     B:EntityGorgon=true
@@ -119,6 +130,7 @@ permittedentities {
     B:EntitySkeleton=true
     B:EntitySlime=true
     B:EntitySpider=true
+    B:EntityStray=true
     B:EntityTroll=true
     B:EntityWitch=true
     B:EntityWither=true
