--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -13,6 +13,7 @@ entitiesalwaysinfernal {
     B:EntityDreadKnight=false
     B:EntityDreadScuttler=false
     B:EntityDreadThrall=false
+    B:EntityElderGuardian=false
     B:EntityEnderman=false
     B:EntityGhast=false
     B:EntityGorgon=false
@@ -37,6 +38,7 @@ entitiesalwaysinfernal {
     B:MutantZombieEntity=false
     B:Netherfish=false
     B:PoisonousLibelle=false
+    B:Werewolf=false
 }
 
 
@@ -44,12 +46,17 @@ entitybasehealth {
     D:EntityBlaze=20.0
     D:EntityBlueSlime=1.0
     D:EntityCreeper=20.0
+    D:EntityDreadGhoul=30.0
+    D:EntityDreadKnight=53.714599609375
+    D:EntityDreadScuttler=49.305877685546875
+    D:EntityDreadThrall=21.692237854003906
     D:EntityEnderman=40.0
     D:EntityGhast=10.0
     D:EntityGrottol=20.0
     D:EntityPigZombie=20.0
     D:EntitySkeleton=20.0
     D:EntitySpider=16.0
+    D:EntityStray=20.0
     D:EntityTroll=50.72803497314453
     D:EntityWitch=26.0
     D:EntityWitherSkeleton=20.0
@@ -120,6 +127,7 @@ permittedentities {
     B:EntityDreadKnight=true
     B:EntityDreadScuttler=true
     B:EntityDreadThrall=true
+    B:EntityElderGuardian=true
     B:EntityEnderman=true
     B:EntityGhast=true
     B:EntityGorgon=true
@@ -144,6 +152,7 @@ permittedentities {
     B:MutantZombieEntity=true
     B:Netherfish=true
     B:PoisonousLibelle=true
+    B:Werewolf=true
 }
 
 
